# warehouse-under-control

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
shared/proto/: BUILD.bazel  ui.proto  warehouse.proto
web-app/bff/: BUILD.bazel  handler.cc  handler.h  handler_test.cc  main.cc
web-app/ui/: BUILD.bazel  angular.json  ng_wrapper.js  package.json  pnpm-lock.yaml  tsconfig.json
web-app/ui/src/: index.html  main.ts  styles.css
web-app/ui/src/app/: app.component.ts
web-app/ui/src/app/login/: login.component.css  login.component.html  login.component.ts
