load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "ng_bin",
    data = [
        ":node_modules/@angular/cli",
    ],
    entry_point = "ng_wrapper.js",
    visibility = ["//visibility:public"],
)

# Define the build task
js_run_binary(
    name = "build",
    srcs = glob(["src/**"]) + [
        "angular.json",
        "package.json",
        "tsconfig.json",
        ":node_modules",
    ],
    args = [
        "build",
        "ui",
        "--preserve-symlinks",
    ],
    chdir = "web-app/ui",
    out_dirs = ["dist"],
    tool = ":ng_bin",
)

# This exposes the 'dist' folder to your C++ BFF
filegroup(
    name = "dist_files",
    srcs = [":build"],
    visibility = ["//web-app/bff:__pkg__"],
)
